# bazel-react-spike

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
src/: BUILD.bazel  app.tsx  index.html
